fixed flicker bug, improved ui on phones

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -140,3 +140,11 @@ h2 {
     border-radius: 12px;
     margin: 0;
 }
+
+@media only screen and (max-width:400px) {
+    #example_container {
+        flex-direction: column;
+        overflow: auto;
+        justify-content: start;
+    }
+}
